fixed buttons, header spacing, table layout, and nav links

--- a/css/page_template.css
+++ b/css/page_template.css
@@ -76,12 +76,20 @@ p {
  a {
    text-decoration: none;
    font-family: 'Shadows Into Light', cursive;
-   font-size: 20px;
+   font-size: 25px;
    color: black;
  }
 
  a:hover {
    color: green;
+ }
+
+ button {
+   height: 50px;
+   width: 100px;
+   border: solid green thin;
+   border-radius: 10px;
+   background-color: rgba(173, 173, 173, 0.23);
  }
 
  footer{
@@ -117,7 +125,7 @@ p {
 
  .Game-Name{
    font-family: 'Creepster', cursive;
-   font-size: 60px;
+   font-size: 80px;
    vertical-align: middle;
    text-align: center;
    align-self: center;
